@@ -531,6 +531,7 @@ bool logpos;
 	inline int8	GetClass()					const { return class_; }
 	inline uint8	GetLevel()				const { return level; }
 	inline const char*	GetName()			const { return name; }
+	inline const char*	GetLastName()			const { return lastname; }
 	const char *GetCleanName();
 	inline Mob*			GetTarget()			const { return target; }
 	virtual void SetTarget(Mob* mob);
@@ -941,6 +942,7 @@ bool logpos;
 	Timer* GetAIMovementTimer() { return AImovement_timer; }
 	Timer GetAttackTimer() { return attack_timer; }
 	Timer GetAttackDWTimer() { return attack_dw_timer; }
+	inline bool IsFindable() { return findable; }
 
 protected:
 	void CommonDamage(Mob* other, sint32 &damage, const uint16 spell_id, const SkillType attack_skill, bool &avoidable, const sint8 buffslot, const bool iBuffTic);
